objects/ssot__EntpUserEmail__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailAddress__c</fullName>
        <label>Email Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnterpriseSource__c</fullName>
        <label>Enterprise Source</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnterpriseUserId__c</fullName>
        <label>Enterprise User</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Enterprise User Email Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1743122253672_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EntpUserEmail_EnterpriseUserId_map_E_rel</label>
        <referenceTo>ssot__EntpUser__dlm</referenceTo>
        <relationshipLabel>EntpUserEmail_EnterpriseUserId_map_E_rel</relationshipLabel>
        <relationshipName>rel_1743122253672_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>